--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+code {
+  font-family: var(--node-font-family-mono);
+}
