--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -32,3 +32,13 @@
   font-display: swap;
 }
 
+/* Geist Mono Font Family (Monospaced for code) */
+
+@font-face {
+  font-family: 'Geist Mono';
+  src: url('../assets/fonts/GeistMono-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
