--- a/src/components/Canvas/Canvas.module.css
+++ b/src/components/Canvas/Canvas.module.css
@@ -1,7 +1,6 @@
-.slide {
+.canvasContainer {
   width: 100vw;
   height: 100vh;
-  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
