--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -29,6 +29,8 @@
   --node-color-warning-text: #9a3412;
 
   --node-color-unsaved-edits:  #BF912F;
+  
+  --node-color-close-fill: #ef4444;
 
   --node-border-width: 1px;
 
