--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -5,7 +5,7 @@
   --node-color-idle-text: #000000;
 
   --node-color-hovered: #f0f7ff;
-  --node-color-hovered-border: #7c7c7c;
+  --node-color-hovered-border: #a7a7a7;
   --node-color-hovered-text: #1e40af;
 
   --node-color-selected: #dbeafe;
